# Sonality

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
benches/: __init__.py  composed_scenarios.py  conftest.py  integrated_harness.py  knowledge_accumulation_scenarios.py  knowledge_harness.py  knowledge_scenarios.py  live_scenarios.py  psych_harness.py  psych_scenarios.py  scenario_contracts.py  scenario_runner.py  teaching_harness.py  teaching_scenarios.py  test_ess_calibration_live.py  test_fidelity.py  test_harness_metrics.py  test_integrated_live.py  test_knowledge_accumulation_bench.py  test_knowledge_acquisition_live.py  test_live.py  test_nct_live.py  test_psych_reflection.py  test_psych_stability_live.py  test_reflection_cleanup_live.py  test_scenario_contracts.py  test_teaching_harness.py  test_teaching_suite_live.py  test_trait_retention_live.py
chat/: __init__.py  audio.py  client.py  config.py  llm.py  telegram.py  terminal.py
config/searxng/: settings.yml
data/: ess_log.jsonl  performance_assessment.md
docker/: fathom.Dockerfile  sonality.Dockerfile
docs/: api-reference.md  architecture-assessment.md  configuration.md  design-decisions.md  getting-started.md  index.md  model-considerations.md  performance-assessment-2026-03-12.md  personality-development.md  project-structure.md  testing.md  training-guide.md  usage-and-teaching-plan.md
docs/architecture/: advanced-retrieval.md  agent-core.md  agent-pipeline.md  api-layer.md  chat-clients.md  chunking-derivatives.md  cli-interface.md  configuration-schema.md  data-flow.md  database-connections.md  database-schema.md  dual-store-operations.md  fathom.md  forgetting-system.md  graph-operations.md  index.md  infrastructure.md  knowledge-extraction.md  memory-model.md  memory-subsystem.md  memory.md  module-inventory.md  overview.md  prompts-reference.md  research-upgrade-plan.md  retrieval-pipeline.md  segmentation.md  semantic-features-worker.md  shared.md  sonality.md  system-architecture.md  system-integration-map.md  verified-data-flow.md
docs/concepts/: anti-sycophancy.md  belief-revision.md  beliefs.md  ess.md  index.md  opinion-dynamics.md  reflection.md  retrieval.md  sponge.md
docs/deployment/: configuration.md  docker.md  index.md  quickstart.md
docs/design/: agentic-loop.md  rejected-approaches.md  sycophancy-resistance.md
docs/development/: index.md  testing.md
docs/fathom/: configuration.md  overview.md
docs/operations/: memory-diagnostics.md
docs/research/: background.md  references.md  web-research-synthesis-2026.md
docs/sonality/: configuration.md  testing.md  usage-and-teaching-plan.md
docs/sonality/architecture/: chat-clients.md  data-flow.md  infrastructure.md  knowledge-extraction.md  memory.md  overview.md
docs/sonality/concepts/: anti-sycophancy.md  ess.md  reflection.md
docs/stylesheets/: extra.css
docs/testing/: benchmark-system.md  benchmarks.md  composed-scenarios.md  knowledge-accumulation.md  live-scenarios.md  scenario-runner.md  test-suite-patterns.md  testing-framework.md  testing-infrastructure.md
scripts/: _helpers.py  download_llama_models.py  feed.py  init_neo4j.cypher  init_postgres.sql  memory_diagnostics.py  monitor_benches.sh  x_feed.py
sonality/: __init__.py  __main__.py  agent.py  api.py  cli.py  config.py  ess.py  progress.py  prompts.py  provider.py  schema.py  server.py  token_budget.py
sonality/llm/: __init__.py  caller.py  parse.py  prompts.py
sonality/memory/: __init__.py  belief_provenance.py  consolidation.py  db.py  derivatives.py  dual_store.py  embedder.py  episodes.py  forgetting.py  graph.py  health.py  health_trace.py  knowledge_extract.py  segmentation.py  semantic_features.py  sponge.py  stm.py  stm_consolidator.py  updater.py
sonality/memory/retrieval/: __init__.py  chain.py  reranker.py  router.py  split.py
sonality/tools/: __init__.py  assess.py  consolidate.py  memory.py  reflect.py  synthesize.py  web.py
sonality/web/: __init__.py  context.py  search.py
src/chat/: __init__.py  __main__.py  audio.py  client.py  config.py  telegram.py  terminal.py
src/fathom/: __init__.py  __main__.py  api.py  browser.py  caller.py  cli.py  config.py  db.py  extract.py  llm.py  models.py  observe.py  prompts.py  provider.py  ranking.py  search.py  selection.py  session.py  source_memory.py
src/shared/: __init__.py  config.py  embedder.py  errors.py  logging.py  neo4j.py  ranking.py  server.py  types.py
src/shared/llm/: __init__.py  caller.py  parse.py  provider.py
src/sonality/: __init__.py  agent.py  api.py  automaton.py  bookkeeping.py  caller.py  cli.py  config.py  ess.py  progress.py  prompts.py  provider.py  request_identity.py  schema.py  token_budget.py  web_client.py
src/sonality/memory/: __init__.py  belief_provenance.py  consolidation.py  db.py  derivatives.py  dual_store.py  embedder.py  forgetting.py  graph.py  knowledge_extract.py  segmentation.py  semantic_features.py
src/sonality/tools/: __init__.py  memory.py  reflect.py  synthesize.py  web.py
tests/: conftest.py  containers.py  scenarios.py  test_agent_health.py  test_api.py  test_behavioral.py  test_episodes.py  test_ess_calibration.py  test_ess_parsing.py  test_fidelity.py  test_live.py  test_live_graduated.py  test_nct.py  test_post_process_ordering.py  test_provider_timeout.py  test_sponge.py  test_static_analysis.py  test_trait_retention.py
tests/data/: ibm_argq_sample.json
tests/fathom/: test_models.py
tests/memory/: test_agent_belief_llm.py  test_consistency.py  test_derivatives.py  test_forgetting.py  test_segmentation.py
tests/memory/retrieval/: test_chain.py  test_reranker.py  test_router.py  test_split.py
tests/shared/llm/: test_parse.py
tests/sonality/: test_api.py
tests/sonality/memory/: test_derivatives.py
(+6 files in other folders)
