[project]
name = "sonality"
version = "0.1.0"
description = "LLM agent with a self-evolving personality via the Sponge architecture"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastembed>=0.3.0",
    "fastapi>=0.115.0",
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.12.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
scripts = [
    "openai>=2.29.0",
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "feedparser>=6.0.0",
    "gnews>=0.4.0",
    "aiogram>=3.20.0",
]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.0.0",
    "playwright>=1.58.0",
    "testcontainers[neo4j,qdrant]>=4.0.0",
]
docs = [
    "zensical>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sonality = "sonality.cli:main"
sonality-server = "sonality.server:main"
sonality-chat = "chat.terminal:main"
sonality-telegram = "chat.telegram:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["sonality", "chat", "tests", "benches"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002"]

[tool.ruff.lint.isort]
known-first-party = ["sonality"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["aiogram", "aiogram.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["chat.telegram"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
timeout = 1800
markers = [
    "live: tests/benches that require external model API access",
    "bench: evaluation benchmark suites",
]
